<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="error_empty">This cannot be empty.</string>
    <string name="error_no_web_browser_found">Couldn\'t find a web browser to use.</string>
    <string name="error_compose_character_limit">The post is too long!</string>
    <string name="error_image_edit_failed">The image could not be edited.</string>
    <string name="error_media_upload_type">That type of file cannot be uploaded.</string>
    <string name="error_media_upload_opening">That file could not be opened.</string>
    <string name="error_media_upload_permission">Permission to read media is required.</string>
    <string name="error_media_download_permission">Permission to store media is required.</string>
    <string name="error_media_upload_image_or_video">images and videos cannot both be attached to the same post.</string>
    <string name="error_media_upload_sending">The upload failed.</string>
    <string name="error_sender_account_gone">Error sending post.</string>
    <string name="error_following_hashtag_format">Error following #%s</string>
    <string name="error_unfollowing_hashtag_format">Error unfollowing #%s</string>
    <string name="error_following_hashtags_unsupported">This instance does not support following hashtags.</string>
    <string name="error_muting_hashtag_format">Error muting #%s</string>
    <string name="error_unmuting_hashtag_format">Error unmuting #%s</string>
    <string name="error_status_source_load">Failed to load the status source from the server.</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_public_local">Local</string>
    <string name="title_public_trending">Trending</string>
    <string name="title_public_trending_hashtags">Trending hashtags</string>
    <string name="title_public_trending_links">Trending links</string>
    <string name="title_public_trending_statuses">Trending posts</string>
    <string name="title_tab_public_trending_hashtags">Hashtags</string>
    <string name="title_tab_public_trending_links">Links</string>
    <string name="title_tab_public_trending_statuses">Posts</string>
    <string name="title_public_federated">Federated</string>
    <string name="title_direct_messages">Direct messages</string>
    <string name="title_tab_preferences">Tabs</string>
    <string name="title_view_thread">Thread</string>
    <string name="title_posts">Posts</string>
    <string name="title_posts_with_replies">With replies</string>
    <string name="title_posts_pinned">Pinned</string>
    <string name="title_follows">Follows</string>
    <string name="title_followers">Followers</string>
    <string name="title_favourites">Favorites</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="title_mutes">Muted users</string>
    <string name="title_blocks">Blocked users</string>
    <string name="title_domain_mutes">Hidden domains</string>
    <string name="title_migration_relogin">Re-login for push notifications</string>
    <string name="title_follow_requests">Follow requests</string>
    <string name="title_edit_profile">Edit your profile</string>
    <string name="title_drafts">Drafts</string>
    <string name="title_scheduled_posts">Scheduled posts</string>
    <string name="title_announcements">Announcements</string>
    <string name="title_followed_hashtags">Followed hashtags</string>
    <plurals name="followed_hashtags_posts_count_fmt">
        <item quantity="one">%1$d post</item>
        <item quantity="other">%1$d posts</item>
    </plurals>
    <plurals name="followed_hashtags_accounts_count_fmt">
        <item quantity="one">%1$d account</item>
        <item quantity="other">%1$d accounts</item>
    </plurals>
    <plurals name="followed_hashtags_days_count_fmt">
        <item quantity="one">%1$d day</item>
        <item quantity="other">%1$d days</item>
    </plurals>
    <string name="followed_hashtags_summary_fmt">%1$s from %2$s (last %3$s)</string>
    <string name="title_edits">Edits</string>
    <string name="dialog_follow_hashtag_title">Follow hashtag</string>
    <string name="dialog_follow_hashtag_hint">#hashtag</string>
    <string name="post_boosted_format">%s boosted</string>
    <string name="post_sensitive_media_title">Sensitive content. Tap to show.</string>
    <string name="attachment_matches_filter_one_fmt">Matches filter: \"%1$s\". Tap to show.</string>
    <string name="attachment_matches_filter_two_fmt">Matches filters: \"%1$s\" and \"%2$s\". Tap to show.</string>
    <string name="attachment_matches_filter_other_fmt">Matches filters: \"%1$s\", \"%2$s\", and more. Tap to show.</string>
    <string name="attachment_hidden_user_action">You hid this. Tap to show.</string>
    <string name="post_media_hidden_title">Media hidden</string>
    <string name="post_media_alt">ALT</string>
    <string name="post_sensitive_media_directions">Click to view</string>
    <string name="post_content_warning_show_more">Show More</string>
    <string name="post_content_warning_show_less">Show Less</string>
    <string name="post_content_show_more">Expand</string>
    <string name="post_content_show_less">Collapse</string>
    <string name="post_edited">Edited %s</string>
    <string name="footer_empty">Nothing here. Pull down to refresh!</string>
    <string name="notification_reblog_format">%s boosted your post</string>
    <string name="notification_favourite_format">%s favorited your post</string>
    <string name="notification_follow_format">%s followed you</string>
    <string name="notification_follow_request_format">%s requested to follow you</string>
    <string name="notification_sign_up_format">%s signed up</string>
    <string name="notification_subscription_format">%s just posted</string>
    <string name="notification_update_format">%s edited their post</string>
    <string name="notification_report_format">New report on %s</string>
    <string name="notification_severed_relationships_format">Relationship with &lt;b>%1$s&lt;/b> severed</string>
    <string name="notification_severed_relationships_domain_block_body">A moderator suspended the domain</string>
    <string name="notification_severed_relationships_user_domain_block_body">You blocked the domain</string>
    <string name="notification_severed_relationships_account_suspension_body">A moderator suspended the account</string>
    <string name="notification_severed_relationships_unknown_body">Unknown reason</string>
    <string name="notification_severed_relationships_domain_block_fmt">An admin of %1$s blocked &lt;b>%2$s&lt;/b></string>
    <string name="notification_severed_relationships_user_domain_block_fmt">You blocked &lt;b>%1$s&lt;/b></string>
    <string name="notification_severed_relationships_account_suspension_fmt">An admin of %1$s blocked &lt;b>%2$s&lt;/b></string>
    <string name="notification_severed_relationships_unknown_fmt">&lt;b>%1$s&lt;/b> is blocked (unknown reason)</string>
    <plurals name="notification_severed_relationships_summary_followers_fmt">
        <item quantity="one">%1$s follower removed.</item>
        <item quantity="other">%1$s followers removed.</item>
    </plurals>
    <plurals name="notification_severed_relationships_summary_following_fmt">
        <item quantity="one">%1$s account you follow removed.</item>
        <item quantity="other">%1$s accounts you follow removed.</item>
    </plurals>
    <string name="notification_moderation_warning_title">A message from your moderators</string>
    <string name="notification_moderation_warning_body_none_fmt">You have received a moderation warning: %1$s</string>
    <string name="notification_moderation_warning_body_disable_fmt">Your account has been disabled: %1$s</string>
    <string name="notification_moderation_warning_body_mark_statuses_as_sensitive_fmt">Some of your posts have been marked sensitive: %1$s</string>
    <string name="notification_moderation_warning_body_delete_statuses_fmt">Some of your posts have been deleted: %1$s</string>
    <string name="notification_moderation_warning_body_silence_fmt">Your account has been limited: %1$s</string>
    <string name="notification_moderation_warning_body_suspend_fmt">Your account has been suspended: %1$s</string>
    <string name="notification_moderation_warning_body_unknown_fmt">You have received a moderation warning: %1$s</string>
    <string name="notification_moderation_warning_tap_for_more">Tap to see more details on your server.</string>
    <string name="notification_unknown">Unknown notification type</string>
    <string name="notification_header_report_format">%s reported %s</string>
    <plurals name="notification_summary_report_format">
        <item quantity="one">%1$s · %2$d post attached</item>
        <item quantity="other">%1$s · %2$d posts attached</item>
    </plurals>
    <string name="report_username_format">Report @%s</string>
    <string name="report_comment_hint">Additional comments?</string>
    <string name="action_quick_reply">Quick Reply</string>
    <string name="action_reply">Reply</string>
    <string name="action_reblog">Boost</string>
    <string name="action_unreblog">Remove boost</string>
    <string name="action_favourite">Favorite</string>
    <string name="action_unfavourite">Remove favorite</string>
    <string name="action_bookmark">Bookmark</string>
    <string name="action_unbookmark">Remove bookmark</string>
    <string name="action_compose">Compose</string>
    <string name="action_post_failed">Upload failed</string>
    <string name="action_post_failed_detail">Your post failed to upload and has been saved to drafts.\n\nEither the server could not be contacted, or it rejected the post.</string>
    <string name="action_search">Search</string>
    <string name="visibility_public">Public: Post to public timelines</string>
    <string name="visibility_unlisted">Unlisted: Do not show in public timelines</string>
    <string name="visibility_private">Followers-Only: Post to followers only</string>
    <string name="visibility_direct">Direct: Post to mentioned users only</string>
    <string name="action_remove_tab">Remove tab</string>
    <string name="action_manage_tabs">Manage tabs</string>
    <string name="search_operator_attachment_all">Media ▾</string>
    <string name="search_operator_from_all">From ▾</string>
    <string name="search_operator_poll_all">Polls ▾</string>
    <string name="search_operator_embed_all">Preview cards ▾</string>
    <string name="search_operator_link_all">Links ▾</string>
    <string name="search_operator_date_all">Dates ▾</string>
    <string name="search_operator_date_dialog_all">Any time</string>
    <string name="search_operator_date_dialog_today">Today</string>
    <string name="search_operator_date_dialog_last_7_days">Last 7 days</string>
    <string name="search_operator_date_dialog_last_30_days">Last 30 days</string>
    <string name="search_operator_date_dialog_last_6_months">Last 6 months</string>
    <string name="search_operator_date_dialog_custom_range">Custom range</string>
    <string name="search_operator_language_all">Any language ▾</string>
    <string name="search_operator_replies_all">With replies ▾</string>
    <string name="search_operator_sensitive_all">With sensitive content ▾</string>
    <string name="search_operator_where_all">All posts ▾</string>
    <string name="search_operator_where_dialog_all">All posts</string>
    <string name="search_operator_where_dialog_all_hint">Posts in your library and public posts</string>
    <string name="search_operator_where_dialog_library">Your library</string>
    <string name="search_operator_where_dialog_library_hint">Your own posts, boosts, favorites, bookmarks, and posts that @mention you</string>
    <string name="search_operator_where_dialog_public">Public posts</string>
    <string name="search_operator_where_dialog_public_hint">Public, searchable posts known by server</string>
</resources>