<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:layout_height="wrap_content"
    tools:layout_width="match_parent"
    tools:parentTag="RadioGroup">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/compose_visibility_title"
        android:textSize="?attr/status_text_medium"
        android:textStyle="normal|bold" />

    <RadioButton
        android:id="@+id/publicRadioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:button="@drawable/ic_public_24dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:text="@string/visibility_public"
        android:textColor="?android:textColorTertiary" />

    <RadioButton
        android:id="@+id/unlistedRadioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:button="@drawable/ic_lock_open_24dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:text="@string/visibility_unlisted" />

    <RadioButton
        android:id="@+id/privateRadioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:button="@drawable/ic_lock_24dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:text="@string/visibility_private" />

    <RadioButton
        android:id="@+id/directRadioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:button="@drawable/ic_email_24dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:text="@string/visibility_direct" />

</merge>
